# CCCT

./: CMakeLists.txt
src/week2/: CMakeLists.txt  Computer.cpp  Computer.h  Human.cpp  Human.h  Player.cpp  Player.h  Referee.cpp  Referee.h  main.cpp
src/week3/: Avalanche.cpp  Avalanche.h  Bureaucrat.cpp  Bureaucrat.h  CMakeLists.txt  Computer.cpp  Computer.h  Crescendo.cpp  Crescendo.h  FistfullODollars.cpp  FistfullODollars.h  Human.cpp  PaperDoll.cpp  PaperDoll.h  RandomComputer.cpp  RandomComputer.h  Referee.cpp  Referee.h  Toolbox.cpp  Toolbox.h  main.cpp  test
